const_typed_builder_test/compile_fail/group_and_mandatory_1.stderr
error[E0599]: no method named `build` found for struct `FooBuilder<false, true, false>` in the current scope
  --> ./compile_fail/group_and_mandatory_1.rs:14:53
   |
4  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `build` not found for this struct
...
14 |     let _ = Foo::builder().baz("Hello".to_string()).build();
   |                                                     ^^^^^ method not found in `FooBuilder<false, true, false>`
   |
   = note: the method was found for
           - `FooBuilder<true, false, true>`
           - `FooBuilder<false, true, true>`
